@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.boozallen.aissemble</groupId>
         <artifactId>aissemble-root</artifactId>
-        <version>1.9.4</version>
+        <version>1.10.0</version>
     </parent>
 
     <artifactId>build-parent</artifactId>
@@ -22,54 +22,66 @@
     </distributionManagement>
 
     <properties>
-        <version.aissemble>1.9.4</version.aissemble>
+        <version.aissemble>1.10.0</version.aissemble>
 
         <!-- **************** -->
         <!-- Plugins versions -->
         <!-- **************** -->
         <version.archetype.plugin>3.2.1</version.archetype.plugin>
-        <version.assembly.plugin>3.6.0</version.assembly.plugin>
-        <version.buildhelper.plugin>3.2.0</version.buildhelper.plugin>
-        <version.buildnumber.plugin>3.1.0</version.buildnumber.plugin>
+        <version.assembly.plugin>3.7.1</version.assembly.plugin>
+        <version.buildhelper.plugin>3.6.0</version.buildhelper.plugin>
+        <version.buildnumber.plugin>3.2.1</version.buildnumber.plugin>
         <version.failsafe.plugin>${version.maven.surefire.plugin}</version.failsafe.plugin>
         <version.fermenter>2.10.3</version.fermenter>
         <version.fermenter.legacy.tools>2.8.0</version.fermenter.legacy.tools>
-        <version.habushu.plugin>2.16.1</version.habushu.plugin>
+        <version.habushu.plugin>2.17.0</version.habushu.plugin>
         <version.python>3.11.4</version.python>
-        <version.help.plugin>3.2.0</version.help.plugin>
-        <version.krausening>19</version.krausening>
+        <version.help.plugin>3.5.0</version.help.plugin>
+        <version.krausening>20</version.krausening>
         <version.plexus.archiver>3.6.0</version.plexus.archiver>
         <version.plugin.plugin>3.9.0</version.plugin.plugin>
-        <version.quarkus>2.8.3.Final</version.quarkus>
+        <version.quarkus>3.6.9</version.quarkus>
         <version.quarkus.plugin>${version.quarkus}</version.quarkus.plugin>
-        <version.shade.plugin>3.2.4</version.shade.plugin>
-        <version.smallrye.config>1.12.0</version.smallrye.config>
-        <version.smallrye.plugin>1.6.0</version.smallrye.plugin>
-        <version.smallrye.reactive.messaging>3.15.0</version.smallrye.reactive.messaging>
+        <version.shade.plugin>3.6.0</version.shade.plugin>
+        <version.smallrye.config>3.9.1</version.smallrye.config>
+        <version.smallrye.graphql>2.9.1</version.smallrye.graphql>
+        <version.smallrye.reactive.messaging>4.24.0</version.smallrye.reactive.messaging>
         <version.orphedomos.plugin>0.10.1</version.orphedomos.plugin>
         <version.janino>3.0.8</version.janino>
-        <version.jackson>2.13.2</version.jackson>
-        <version.jclouds>2.5.0</version.jclouds>
-        <version.log4j>2.20.0</version.log4j>
+        <version.jackson>2.15.0</version.jackson>
+        <version.jclouds>2.6.0</version.jclouds>
         <version.maven.core>3.8.6</version.maven.core>
-        <version.mutiny>0.5.0</version.mutiny>
+        <version.mutiny>2.6.2</version.mutiny>
         <version.plexus.component>2.1.1</version.plexus.component>
         <version.postgresql>42.5.1</version.postgresql>
-        <version.resteasy>4.7.7.Final</version.resteasy>
-        <version.vertx>4.2.5</version.vertx>
+        <version.resteasy>6.2.8.Final</version.resteasy>
+        <version.vertx>4.5.9</version.vertx>
         <version.urllib3>^1.26.18</version.urllib3>
         <version.fastapi>&gt;=0.95.0</version.fastapi>
         <version.uvicorn>&gt;=0.18.0</version.uvicorn>
         <version.cryptography>&gt;=42.0.4</version.cryptography>
         <version.python.krausening>&gt;=${version.krausening}</version.python.krausening>
-        <version.slf4j>2.0.7</version.slf4j>
         <version.delta.hive.connector>0.6.0</version.delta.hive.connector>
-        <version.testcontainers>1.19.8</version.testcontainers>
+        <version.testcontainers>1.20.1</version.testcontainers>
         <version.vault>5.1.0</version.vault>
+        <version.awaitility>4.0.3</version.awaitility>
+        <version.plexus.util>3.5.1</version.plexus.util>
+        <version.jackson.mapper.asl>1.9.3</version.jackson.mapper.asl>
+        <version.exec.maven.plugin>3.4.1</version.exec.maven.plugin>
 
-<!--        Spark Default Dependencies.  See `spark-*` profiles below for alternative sets -->
-        <version.spark>3.4.0</version.spark>
-        <version.delta>2.4.0</version.delta>
+        <!-- Java EE Dependencies -->
+        <version.jakarta.cdi>4.0.1</version.jakarta.cdi>
+        <version.jakarta.inject>2.0.1</version.jakarta.inject>
+        <version.jakarta.annotation>3.0.0</version.jakarta.annotation>
+        <version.jakarta.wr.rs>3.1.0</version.jakarta.wr.rs>
+        <version.jakarta.activation.api>2.1.2</version.jakarta.activation.api>
+        <version.javax.servlet>3.1.0</version.javax.servlet>
+
+        <!-- Spark Default Dependencies.  See `spark-*` profiles below for alternative sets -->
+        <version.spark>3.5.2</version.spark>
+        <version.scala>2.12.20</version.scala>
+        <version.scala.minor>2.12</version.scala.minor>
+        <version.delta>3.2.1</version.delta>
         <version.elasticsearch>8.9.0</version.elasticsearch>
         <version.sedona>1.4.0</version.sedona>
         <version.geotools.wrapper>1.4.0-28.2</version.geotools.wrapper>
@@ -78,8 +90,8 @@
         <version.neo4j>4.1.5_for_spark_3</version.neo4j>
         <version.aws.sdk.bundle>1.12.262</version.aws.sdk.bundle>
         <version.baton>1.1.1</version.baton>
-        <version.quarkus.cucumber>0.6.0</version.quarkus.cucumber>
-        <version.quarkus.cucumber.java>7.4.1</version.quarkus.cucumber.java>
+        <version.quarkus.cucumber>1.0.0</version.quarkus.cucumber>
+        <version.quarkus.cucumber.java>${version.cucumber}</version.quarkus.cucumber.java>
 
         <!-- io.fabric8:docker-maven-plugin -->
         <version.fabric8.docker.maven.plugin>0.45-tb-0.1.0</version.fabric8.docker.maven.plugin>
@@ -111,9 +123,9 @@
         <maven.compiler.argument.testSource>${maven.compiler.source}</maven.compiler.argument.testSource>
 
         <!-- maven-enforcer-plugin -->
-        <version.maven.min>3.6.2</version.maven.min>
+        <version.maven.min>3.9.6</version.maven.min>
         <version.jdk.required>${maven.compiler.argument.source}</version.jdk.required>
-        <version.jdk.next-unsupported>12</version.jdk.next-unsupported>
+        <version.jdk.next-unsupported>18</version.jdk.next-unsupported>
         <insecure.repositories>ERROR</insecure.repositories>
 
         <!-- maven-idea-plugin & maven-eclipse-plugin -->
@@ -146,30 +158,19 @@
         <version.helm.plugin>6.14.3</version.helm.plugin>
         <version.helm.min>3.12.0</version.helm.min>
         <version.snakeyaml>2.0</version.snakeyaml>
+
+        <!-- OpenLineage java -->
+        <version.open.lineage.java>1.23.0</version.open.lineage.java>
     </properties>
 
     <dependencyManagement>
-        <!-- NB: Why are these here and not with the other dependencies? -->
         <dependencies>
+            <!-- force upgrade jandex from 3.1.6 to 3.2.2 for compatibility with smalrye 4.24-->
+            <!-- NB: this will likely be unnecessary after upgrading to Quarkus 3.14+ -->
             <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-core</artifactId>
-                <version>${version.log4j}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-api</artifactId>
-                <version>${version.log4j}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-slf4j2-impl</artifactId>
-                <version>${version.log4j}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
-                <version>${version.slf4j}</version>
+                <groupId>io.smallrye</groupId>
+                <artifactId>jandex</artifactId>
+                <version>3.2.2</version>
             </dependency>
             <dependency>
                 <groupId>net.masterthought</groupId>
@@ -377,6 +378,7 @@
                         <environmentVariables>
                             <TESTCONTAINERS_RYUK_DISABLED>${TESTCONTAINERS_RYUK_DISABLED}</TESTCONTAINERS_RYUK_DISABLED>
                         </environmentVariables>
+                        <argLine>--add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -496,10 +498,6 @@
                                 <operatorAndVersion>${version.aissemble}</operatorAndVersion>
                             </packageDefinition>
                             <packageDefinition>
-                                <packageName>aissemble-model-training-api-sagemaker</packageName>
-                                <operatorAndVersion>${version.aissemble}</operatorAndVersion>
-                            </packageDefinition>
-                            <packageDefinition>
                                 <packageName>aissemble-test-data-delivery-pyspark-model</packageName>
                                 <operatorAndVersion>${version.aissemble}</operatorAndVersion>
                             </packageDefinition>
@@ -551,6 +549,7 @@
                             <DOCKER_BASELINE_REPO_ID>${docker.baseline.repo.id}/</DOCKER_BASELINE_REPO_ID>
                             <VERSION_AISSEMBLE>${version.aissemble}</VERSION_AISSEMBLE>
                             <SPARK_VERSION>${version.spark}</SPARK_VERSION>
+                            <SCALA_VERSION>${version.scala.minor}</SCALA_VERSION>
                         </buildArgs>
                     </configuration>
                 </plugin>
@@ -577,6 +576,10 @@
                                         <build>
                                             <buildx>
                                                 <builderName>maven</builderName>
+                                                <driverOpts>
+                                                    <!-- Fully qualify build driver image name to ensure any configured credentials are used -->
+                                                    <image>docker.io/moby/buildkit:buildx-stable-1</image>
+                                                </driverOpts>
                                                 <cacheTo>type=local,dest=${user.home}/.docker/cache</cacheTo>
                                                 <cacheFrom>type=local,src=${user.home}/.docker/cache</cacheFrom>
                                             </buildx>
@@ -596,10 +599,11 @@
                                         <DOCKER_BASELINE_REPO_ID>${docker.baseline.repo.id}/</DOCKER_BASELINE_REPO_ID>
                                         <VERSION_AISSEMBLE>${version.aissemble}</VERSION_AISSEMBLE>
                                         <SPARK_VERSION>${version.spark}</SPARK_VERSION>
+                                        <SCALA_VERSION>${version.scala.minor}</SCALA_VERSION>
                                     </args>
                                     <buildx>
                                         <builderName>default</builderName>
-                                        <dockerStateDir>~/.docker</dockerStateDir>
+                                        <dockerStateDir>~/.docker/fabric8</dockerStateDir>
                                         <platforms>
                                             <platform>${docker.platforms}</platform>
                                         </platforms>
@@ -764,7 +768,7 @@
                         <dependency>
                             <groupId>com.boozallen.aissemble</groupId>
                             <artifactId>booz-allen-licenses</artifactId>
-                            <version>1.2.0</version>
+                            <version>1.2.1</version>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -870,6 +874,14 @@
                             <TESTCONTAINERS_RYUK_DISABLED>${TESTCONTAINERS_RYUK_DISABLED}</TESTCONTAINERS_RYUK_DISABLED>
                             <!--<TESTCONTAINERS_HUB_IMAGE_NAME_PREFIX>YOUR MIRROR OR INTENRAL REPO GOES HERE - e.g., nexus.foobar.com/</TESTCONTAINERS_HUB_IMAGE_NAME_PREFIX>-->
                         </environmentVariables>
+                        <!-- Spark needs to use an internal API that has been made inaccessible by default, this is resolved by add-exports.
+                        Apache Hive currently does not support java 17, so the add-opens workaround is used to allow the illegal reflection 
+                        call until Hive updates their compatible Java versions.  
+                        https://stackoverflow.com/questions/41265266/how-to-solve-inaccessibleobjectexception-unable-to-make-member-accessible-m?rq=2-->
+                        <argLine>
+                            --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+                            --add-opens java.base/java.net=ALL-UNNAMED
+                        </argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -1107,33 +1119,6 @@ To suppress enforce-helm-version rule, you must add following plugin to the root
                                 </goals>
                             </execution>
                         </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>incremental</id>
-            <activation>
-                <property>
-                    <name>incremental</name>
-                </property>
-            </activation>
-            <properties>
-                <!-- the *local* dev, not refs/remotes/... -->
-                <gib.referenceBranch>dev</gib.referenceBranch>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>io.github.gitflow-incremental-builder</groupId>
-                        <artifactId>gitflow-incremental-builder</artifactId>
-                        <version>${version.gitflow-incremental-builder}</version>
-                        <extensions>true</extensions>
-                        <!-- https://github.com/gitflow-incremental-builder/gitflow-incremental-builder#configuration
-                             General recap: Anything that is directly set in <configuration> cannot be redefined via '-D...'!
-                             See also: https://github.com/gitflow-incremental-builder/gitflow-incremental-builder/issues/213 -->
-                        <configuration>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
